--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/v1ack/PDFview#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "fs-extra": "^9.1.0",
     "pdfjs-dist": "^2.6.347",
@@ -32,5 +37,12 @@
     "svelte": "^3.35.0",
     "svelte-loader": "^3.0.0",
     "svelte-preprocess": "^4.6.9"
-  }
+  },
+  "dependencies": {
+    "markdown-it": "^12.0.4"
+  },
+  "browserslist": [
+    "chrome 50"
+  ],
+  "svelte": "src/index.js"
 }
