--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@babel/preset-env": "^7.13.12",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "fs-extra": "^9.1.0",
     "pdfjs-dist": "^2.6.347",
@@ -39,7 +38,7 @@
     "svelte-preprocess": "^4.6.9"
   },
   "dependencies": {
-    "markdown-it": "^12.0.4"
+    "remarkable": "^2.0.1"
   },
   "browserslist": [
     "chrome 50"
