Code style, update dependencies, fix animation

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "semi": false,
   "singleQuote": false,
   "bracketSpacing": false,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "tabWidth": 2
 }
