--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "format": "prettier -w src",
+    "format": "prettier -w src/**/* -u",
     "start": "sirv build"
   },
   "repository": {
@@ -20,26 +20,26 @@
   },
   "homepage": "https://github.com/v1ack/PDFview#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/core": "^7.13.16",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "core-js": "^3.11.0",
     "fs-extra": "^9.1.0",
-    "pdfjs-dist": "^2.6.347",
+    "pdfjs-dist": "^2.7.570",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "rollup": "^2.41.5",
+    "rollup": "^2.45.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sirv-cli": "^1.0.11",
-    "svelte": "^3.35.0",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.6.9"
+    "svelte": "^3.37.0",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "^4.7.2"
   },
   "dependencies": {
     "remarkable": "^2.0.1"
