--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdfview",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "pdf view app for tizen",
   "main": "app.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "pdfjs-dist": "^2.7.570",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "remarkable": "^2.0.1",
     "rollup": "^2.45.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -40,9 +41,6 @@
     "svelte": "^3.37.0",
     "svelte-loader": "^3.1.1",
     "svelte-preprocess": "^4.7.2"
-  },
-  "dependencies": {
-    "remarkable": "^2.0.1"
   },
   "browserslist": [
     "chrome 50"
